# golang/domain/model/token.go
@@ -1,6 +1,0 @@
-package model
-
-type Token struct {
-	Authorization string `json:"Authorization"`
-	Type          string `json:"type"`
-}
