# golang/domain/model/user.go
@@ -1,25 +1,31 @@
 package model
 
 type User struct {
-	UserID      string `gorm:"column:user_id"`
+	ID          int64  `gorm:"column:id"`
+	UserName    string `gorm:"column:user_name"`
 	Password    string `gorm:"column:password"`
+	Email       string `gorm:"column:email"`
 	Status      string `gorm:"column:status"`
 	CreatedTime string `gorm:"column:created_time"`
 	UpdatedTime string `gorm:"column:updated_time"`
 }
 type Login struct {
-	UserID   string `json:"UserID"`
-	Password string `json:"Password"`
+	UserName string `json:"user_name"`
+	Password string `json:"password"`
 }
 
 type RegisterUser struct {
-	UserID   string `json:"UserID"`
-	Password string `json:"Password"`
-	Email    string `json:"email"`
+	ID          int64  `gorm:"column:id"`
+	UserName    string `gorm:"column:user_name"`
+	Password    string `gorm:"column:password"`
+	Email       string `gorm:"column:email"`
+	Status      string `gorm:"column:status"`
+	CreatedTime string `gorm:"column:created_time"`
+	UpdatedTime string `gorm:"column:updated_time"`
 }
 
 type GetUser struct {
-	UserID       string `bson:"userid"`
+	UserName     string `bson:"userid"`
 	Password     string `bson:"password"`
 	Email        string `bson:"email"`
 	ActiceEmail  string `bson:"actice"`
